Fix: scroll width jiggle on mobile

--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -15,7 +15,7 @@
     }
      @media (min-width: 0px) and (max-width: 649px) {
             &__section{
-                 margin: 0;
+                 margin: 0 auto;
                 padding: 0;
             }
         }
